# aws-local-client

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  e2e.yml
.superpowers/sdd/: exp-task-3-report.md  task-p2-3-report.md  task-p2-4-report.md  task-p2-5-report.md
docs/design/: ui-mock.html
docs/superpowers/plans/: 2026-07-13-dynamodb-client.md  (+5 more)
e2e/: SPEC-COVERAGE.md  tsconfig.json  wdio.conf.ts  wdio.ios.conf.ts
e2e/helpers/: app.ts  aws.ts  capabilities.ts  emulator.ts  lambdaZip.ts
e2e/specs/: api-gateway.e2e.ts  athena.e2e.ts  backups.e2e.ts  cloudformation.e2e.ts  cloudwatch.e2e.ts  cognito.e2e.ts  connections.e2e.ts  dashboard.e2e.ts  ecr.e2e.ts  ecs.e2e.ts  elasticache.e2e.ts  eventbridge.e2e.ts  items.e2e.ts  lambda.e2e.ts  msk.e2e.ts  opensearch.e2e.ts  partiql.e2e.ts  rds.e2e.ts  route53.e2e.ts  s3.e2e.ts  secrets-manager.e2e.ts  smoke.e2e.ts  sns.e2e.ts  sqs.e2e.ts  ssm.e2e.ts  step-functions.e2e.ts  tables.e2e.ts
scripts/: emulator.sh  probe-services.sh
src/: App.tsx  main.tsx  test-setup.ts  vite-env.d.ts  web-smoke.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json  wdio-desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: attr.rs  connections.rs  ddb.rs  error.rs  lib.rs
src-tauri/src/commands/: apigateway.rs  athena.rs  cloudformation.rs  cloudwatch.rs  cloudwatch_query.rs  cognito.rs  ecr.rs  ecs.rs  elasticache.rs  eventbridge.rs  lambda.rs  mod.rs  msk.rs  opensearch.rs  rds.rs  route53.rs  s3.rs  secretsmanager.rs  sns.rs  sqs.rs  ssm.rs  stepfunctions.rs
src-tauri/tests/: integration_apigateway.rs  integration_athena.rs  integration_cloudformation.rs  integration_cloudwatch.rs  integration_cognito.rs  integration_ddb.rs  integration_ecr.rs  integration_ecs.rs  integration_elasticache.rs  integration_eventbridge.rs  integration_lambda.rs  integration_msk.rs  integration_opensearch.rs  integration_rds.rs  integration_route53.rs  integration_s3.rs  integration_secretsmanager.rs  integration_sns.rs  integration_sqs.rs  integration_ssm.rs  integration_stepfunctions.rs
src/api/: apigateway.ts  athena.ts  client.ts  cloudformation.ts  cloudwatch.ts  cognito.ts  dynamodb.ts  ecr.ts  ecs.ts  elasticache.ts  eventbridge.ts  lambda.ts  msk.ts  opensearch.ts  rds.ts  route53.ts  s3.ts  secretsmanager.ts  sns.ts  sqs.ts  ssm.ts  stepfunctions.ts  types.ts
src/components/: ErrorBanner.tsx  Layout.test.tsx  Layout.tsx  SideNav.tsx
src/lib/: ddbJson.test.ts  ddbJson.ts  format.test.ts  format.ts  regions.ts  unsupported.test.ts  unsupported.ts  useProfileScopedFetch.test.tsx  useProfileScopedFetch.ts
src/pages/: ConnectionsPage.tsx  Home.test.tsx  Home.tsx
src/services/: icons.ts  registry.ts  types.ts
src/state/: connections.test.tsx  connections.tsx
(+229 files in other folders)
