[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
# E2E (WebdriverIO) support. Registered only in debug builds (see lib.rs).
# `tauri-plugin-wdio` exposes the WDIO command surface; `tauri-plugin-wdio-webdriver`
# runs an embedded W3C WebDriver HTTP server so macOS works without an external driver.
tauri-plugin-wdio = "1"
tauri-plugin-wdio-webdriver = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-sdk-s3 = "1"
aws-sdk-rds = "1"
aws-sdk-lambda = "1"
aws-sdk-apigateway = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-eventbridge = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-elasticache = "1"
aws-sdk-cloudformation = "1"
aws-sdk-ecs = "1"
aws-sdk-ecr = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-sfn = "1"
aws-sdk-opensearch = "1"
aws-sdk-athena = "1"
aws-sdk-kafka = "1"
aws-sdk-ssm = "1"
aws-sdk-route53 = "1"
tauri-plugin-dialog = "2"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
aws-types = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[dev-dependencies]
tempfile = "3"
zip = "2"
